test/errors/struct_type_identical_fields_nominal.haste
const S1 = struct { x: int; y: int; };
const S2 = struct { x: int; y: int; };
const a: S1 = S2{ x: 1, y: 2 };
